# upstageailab-ir-competition-ir-5

./: .gitignore  README.md  pyproject.toml  ruff.toml
docs/: how_to_do_with_langchain.md
notebooks/ahyeon/: rag_with_elasticsearch.py  rag_with_elasticsearch_cohere.py  rag_with_elasticsearch_gemini1.py  rag_with_elasticsearch_gemini2.py  rag_with_elasticsearch_solar.py  setup_env.sh  skqa_make_answer copy.ipynb  skqa_make_answer_cohere.ipynb  skqa_make_answer_gemini.ipynb  skqa_make_answer_solar.ipynb
notebooks/korea202/: skqa_make_answer.ipynb  skqa_make_answer_rerank_post.ipynb  skqa_make_answer_rerank_pre.ipynb  skqa_make_summary.ipynb
notebooks/korea202/data/: all_data.pkl
notebooks/yuiyeong/: 20250911-poc-baseline.ipynb
