[project]
name = "upstageailab-ir-competition-ir-5"
version = "0.1.0"
description = ""
authors = [
    { name = "yuiyeong", email = "joyuiyeong@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "streamlit (>=1.48.1,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-core (>=0.3.27,<0.4.0)",
    "langchain-text-splitters (>=0.3.9,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
    "langsmith (>=0.4.20,<0.5.0)",
    "langchain-chroma (>=0.2.6,<0.3.0)",
    "langchain-pinecone (>=0.2.12,<0.3.0)",
    "langchain-elasticsearch (>=0.3.2,<0.4.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "langchain-upstage (>=0.7.3,<0.8.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "langchain-anthropic (>=0.3.20,<0.4.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
]

[project.optional-dependencies]
dev = [
    "ruff (>=0.12.9,<0.13.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "jupyterlab (>=4.4.6,<5.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{ include = "smart_llm", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
